adjustments to pre-course formatting

--- a/content/pre-course.html
+++ b/content/pre-course.html
@@ -45,11 +45,11 @@ ul.task-list li input[type="checkbox"] {
 
 </head>
 
-<body class="fullcontent">
+<body>
 
-<header id="title-block-header" class="quarto-title-block default page-columns page-full">
+<header id="title-block-header" class="quarto-title-block default toc-left page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
-    <div class="quarto-title column-body">
+    <div class="quarto-title column-page-right">
       <h1 class="title">NASIS Basic Training</h1>
             <p class="subtitle lead">Pre-Course Assignment</p>
                       </div>
@@ -83,9 +83,48 @@ ul.task-list li input[type="checkbox"] {
     </div>
     
   
-  </header><div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
-<main class="content quarto-banner-title-block" id="quarto-document-content">
+  </header><div id="quarto-content" class="page-columns page-rows-contents page-layout-full toc-left">
+<div id="quarto-sidebar-toc-left" class="sidebar toc-left">
+  <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul>
+  <li><a href="#open-the-nasis-client" id="toc-open-the-nasis-client" class="nav-link active" data-scroll-target="#open-the-nasis-client">Open the NASIS Client</a>
+  <ul class="collapse">
+  <li><a href="#locate-the-nasis-editor" id="toc-locate-the-nasis-editor" class="nav-link" data-scroll-target="#locate-the-nasis-editor">Locate the NASIS Editor</a></li>
+  <li><a href="#alternate-method" id="toc-alternate-method" class="nav-link" data-scroll-target="#alternate-method">Alternate Method</a></li>
+  <li><a href="#request-support-if-needed" id="toc-request-support-if-needed" class="nav-link" data-scroll-target="#request-support-if-needed">Request Support if Needed</a></li>
+  </ul></li>
+  <li><a href="#login-to-nasis-and-initialize" id="toc-login-to-nasis-and-initialize" class="nav-link" data-scroll-target="#login-to-nasis-and-initialize">Login to NASIS and Initialize</a>
+  <ul class="collapse">
+  <li><a href="#network-requirement" id="toc-network-requirement" class="nav-link" data-scroll-target="#network-requirement">Network Requirement</a></li>
+  <li><a href="#login-window" id="toc-login-window" class="nav-link" data-scroll-target="#login-window">Login Window</a></li>
+  <li><a href="#initialize-the-local-database" id="toc-initialize-the-local-database" class="nav-link" data-scroll-target="#initialize-the-local-database">Initialize the local database</a></li>
+  </ul></li>
+  <li><a href="#view-the-about-nasis-help-screen" id="toc-view-the-about-nasis-help-screen" class="nav-link" data-scroll-target="#view-the-about-nasis-help-screen">View the About NASIS Help Screen</a>
+  <ul class="collapse">
+  <li><a href="#locate-the-help-menu" id="toc-locate-the-help-menu" class="nav-link" data-scroll-target="#locate-the-help-menu">Locate the Help Menu</a></li>
+  <li><a href="#open-the-about-nasis-window" id="toc-open-the-about-nasis-window" class="nav-link" data-scroll-target="#open-the-about-nasis-window">Open the About NASIS Window</a></li>
+  </ul></li>
+  <li><a href="#confirm-user-information" id="toc-confirm-user-information" class="nav-link" data-scroll-target="#confirm-user-information">Confirm User Information</a>
+  <ul class="collapse">
+  <li><a href="#locate-the-nasis-menu" id="toc-locate-the-nasis-menu" class="nav-link" data-scroll-target="#locate-the-nasis-menu">Locate the NASIS Menu</a></li>
+  <li><a href="#open-the-manage-user-profile-window" id="toc-open-the-manage-user-profile-window" class="nav-link" data-scroll-target="#open-the-manage-user-profile-window">Open the Manage User Profile Window</a></li>
+  <li><a href="#review-information" id="toc-review-information" class="nav-link" data-scroll-target="#review-information">Review Information</a></li>
+  <li><a href="#set-a-default-nasis-group" id="toc-set-a-default-nasis-group" class="nav-link" data-scroll-target="#set-a-default-nasis-group">Set a Default NASIS Group</a></li>
+  <li><a href="#upload-changes" id="toc-upload-changes" class="nav-link" data-scroll-target="#upload-changes">Upload Changes</a></li>
+  </ul></li>
+  <li><a href="#complete-and-submit-assignment" id="toc-complete-and-submit-assignment" class="nav-link" data-scroll-target="#complete-and-submit-assignment">Complete and Submit Assignment</a>
+  <ul class="collapse">
+  <li><a href="#send-screenshots-to-your-mentor" id="toc-send-screenshots-to-your-mentor" class="nav-link" data-scroll-target="#send-screenshots-to-your-mentor">Send Screenshots to Your Mentor</a></li>
+  </ul></li>
+  <li><a href="#additional-resources" id="toc-additional-resources" class="nav-link" data-scroll-target="#additional-resources">Additional Resources</a></li>
+  </ul>
+</nav>
+</div>
+<div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
+</div>
+<main class="content quarto-banner-title-block column-page-right" id="quarto-document-content">
 
 
 
